[tool.poetry]
name = "zeta"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8, <3.11"
pycairo = "^1.20.1"
mpmath = "^1.2.1"
numpy = "^1.21.4"
click = "^8.0.3"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
